@@ -18,11 +18,12 @@ DESCRIPTION
        The  archive format is determined by the file(1) program and as a fall‐
        back by the archive file extension.
 
-       patool supports 7z (.7z), ACE (.ace), ZIP  (.zip,  .jar),  GZIP  (.gz),
-       compress  (.Z),  BZIP2 (.bz2), TAR (.tar), ARJ (.arj), CAB (.cab), CPIO
-       (.cpio), RPM (.rpm), DEB (.deb), LZIP (.lz), LZOP (.lzo), LZMA (.lzma),
-       RAR  (.rar)  and XZ (.xz) formats.  It relies on helper applications to
-       handle those archive formats (for example bzip2 for BZIP2 archives).
+       patool supports 7z (.7z), ACE (.ace), AR (.a), ZIP (.zip,  .jar),  GZIP
+       (.gz), compress (.Z), BZIP2 (.bz2), TAR (.tar), ARJ (.arj), CAB (.cab),
+       CPIO (.cpio), RPM (.rpm), DEB (.deb), LZIP  (.lz),  LZOP  (.lzo),  LZMA
+       (.lzma), RAR (.rar) and XZ (.xz) formats.  It relies on helper applica‐
+       tions to handle those archive formats (for example bzip2 for BZIP2  ar‐
+       chives).
 
 EXAMPLES
          patool extract archive.zip otherarchive.rar
@@ -34,19 +35,19 @@ COMMANDS
        Several commands and options are available.
 
    extract
-       Extract files from an archive. This is the default command if  no  com‐
+       Extract  files  from an archive. This is the default command if no com‐
        mand was given.
-       Often  one  wants to extract all files in an archive to a single subdi‐
-       rectory.  However, some archives contain multiple files in  their  root
+       Often one wants to extract all files in an archive to a  single  subdi‐
+       rectory.   However,  some archives contain multiple files in their root
        directories.  The  patool  program  overcomes  this  problem  by  first
        extracting files to a unique (temporary) directory, and then moving its
-       contents  back  if  possible. This also prevents local files from being
+       contents back if possible. This also prevents local  files  from  being
        overwritten by mistake.
-       All extracted files are checked that they are readable by  the  current
+       All  extracted  files are checked that they are readable by the current
        user.
 
        -v, --verbose
-              Be  verbose  when extracting (if the helper application supports
+              Be verbose when extracting (if the helper  application  supports
               it).
 
        --help Show help for this command.
@@ -60,7 +61,7 @@ COMMANDS
        --help Show help for this command.
 
    create
-       Create an archive from given files. At least on of the given  files  to
+       Create  an  archive from given files. At least on of the given files to
        add to the archive has to exist.
 
        -v, --verbose
