@@ -1,0 +1,4 @@
+!<arch>
+t.txt/          1266562138  1000  1000  100640  3         `
+42
+
